feat: Enable Java 21 preview features
This commit configures the Maven build to enable Java 21 preview features by adding the `--enable-preview` flag to both the `spring-boot-maven-plugin` and `maven-compiler-plugin`.
#
# On branch main
# Your branch is ahead of 'origin/main' by 1 commit.
#   (use "git push" to publish your local commits)
#
# Changes to be committed:
#	modified:   pom.xml
#